# algol68g

./: Makefile.am  Makefile.in  NEWS  README  a68g-config.h  a68g-config.h.in  aclocal.m4  configure  configure.ac
src/a68g/: a68g-apropos.c  a68g-bits.c  a68g-conversion.c  a68g-diagnostics.c  a68g-io.c  a68g-keywords.c  a68g-listing.c  a68g-mem.c  a68g-non-terminal.c  a68g-options.c  a68g-path.c  a68g-postulates.c  a68g-pretty.c  a68g.c  double-gamic.c  double-math.c  double.c  genie-assign.c  genie-call.c  genie-coerce.c  genie-declaration.c  genie-denotation.c  genie-enclosed.c  genie-formula.c  genie-hip.c  genie-identifier.c  genie-misc.c  genie-regex.c  genie-rows.c  genie-stowed.c  genie-unix.c  genie.c  moids-diagnostics.c  moids-misc.c  moids-size.c  moids-to-string.c  mp-bits.c  mp-complex.c  mp-gamic.c  mp-gamma.c  (+65 more)
src/doc/: a68g.1
src/include/: a68g-common.h  a68g-config.win32.h  a68g-defines.h  a68g-diagnostics.h  a68g-double.h  a68g-enums.h  a68g-environ.h  a68g-frames.h  a68g-generic.h  a68g-genie.h  a68g-includes.h  a68g-level-3.h  a68g-lib.h  a68g-listing.h  a68g-mach.h  a68g-masks.h  a68g-math.h  a68g-moids.h  a68g-mp.h  a68g-nil.h  a68g-numbers.h  a68g-optimiser.h  a68g-options.h  a68g-parser.h  a68g-physics.h  a68g-platform.h  a68g-plugin.h  a68g-postulates.h  a68g-prelude-gsl.h  a68g-prelude-mathlib.h  a68g-prelude.h  a68g-stack.h  a68g-stddef.h  a68g-torrix.h  a68g-transput.h  a68g-types.h  a68g.h
src/test-set/: 01-ackermann.a68  02-all-parser.a68  03-arithmetic-derivative.a68  04-bulls-and-cows.a68  07-dictionary.a68  08-digits.a68  10-fft.a68  11-fft-par.a68  12-fibonacci-grammar.a68  13-formula-manipulation.a68  16-hamming.a68  17-hilbert-matrix.a68  18-lisp.a68  19-lucas-sequence.a68  21-math.a68  23-pebbles.a68  29-roman-decimal.a68  32-warshall.a68  33-whetstones.a68  34-www.a68  35-zeroin.a68
