a68g_SOURCES = \
./src/a68g/a68g-apropos.c \
./src/a68g/a68g-bits.c \
./src/a68g/a68g.c \
./src/a68g/a68g-conversion.c \
./src/a68g/a68g-diagnostics.c \
./src/a68g/a68g-io.c \
./src/a68g/a68g-keywords.c \
./src/a68g/a68g-listing.c \
./src/a68g/a68g-mem.c \
./src/a68g/a68g-non-terminal.c \
./src/a68g/a68g-options.c \
./src/a68g/a68g-path.c \
./src/a68g/a68g-postulates.c \
./src/a68g/a68g-pretty.c \
./src/a68g/double.c \
./src/a68g/double-gamic.c \
./src/a68g/double-math.c \
./src/a68g/genie-assign.c \
./src/a68g/genie.c \
./src/a68g/genie-call.c \
./src/a68g/genie-coerce.c \
./src/a68g/genie-declaration.c \
./src/a68g/genie-denotation.c \
./src/a68g/genie-enclosed.c \
./src/a68g/genie-formula.c \
./src/a68g/genie-hip.c \
./src/a68g/genie-identifier.c \
./src/a68g/genie-misc.c \
./src/a68g/genie-regex.c \
./src/a68g/genie-rows.c \
./src/a68g/genie-stowed.c \
./src/a68g/genie-unix.c \
./src/a68g/moids-diagnostics.c \
./src/a68g/moids-misc.c \
./src/a68g/moids-size.c \
./src/a68g/moids-to-string.c \
./src/a68g/mp-bits.c \
./src/a68g/mp.c \
./src/a68g/mp-complex.c \
./src/a68g/mp-gamic.c \
./src/a68g/mp-gamma.c \
./src/a68g/mp-genie.c \
./src/a68g/mp-math.c \
./src/a68g/mp-mpfr.c \
./src/a68g/mp-pi.c \
./src/a68g/parser-bottom-up.c \
./src/a68g/parser-brackets.c \
./src/a68g/parser.c \
./src/a68g/parser-extract.c \
./src/a68g/parser-modes.c \
./src/a68g/parser-moids-check.c \
./src/a68g/parser-moids-coerce.c \
./src/a68g/parser-moids-equivalence.c \
./src/a68g/parser-refinement.c \
./src/a68g/parser-scanner.c \
./src/a68g/parser-scope.c \
./src/a68g/parser-taxes.c \
./src/a68g/parser-top-down.c \
./src/a68g/parser-victal.c \
./src/a68g/plugin-basic.c \
./src/a68g/plugin.c \
./src/a68g/plugin-driver.c \
./src/a68g/plugin-folder.c \
./src/a68g/plugin-gen.c \
./src/a68g/plugin-inline.c \
./src/a68g/plugin-script.c \
./src/a68g/plugin-tables.c \
./src/a68g/prelude-bits.c \
./src/a68g/prelude.c \
./src/a68g/prelude-gsl.c \
./src/a68g/prelude-mathlib.c \
./src/a68g/rts-bool.c \
./src/a68g/rts-char.c \
./src/a68g/rts-curl.c \
./src/a68g/rts-curses.c \
./src/a68g/rts-enquiries.c \
./src/a68g/rts-formatted.c \
./src/a68g/rts-heap.c \
./src/a68g/rts-int128.c \
./src/a68g/rts-internal.c \
./src/a68g/rts-mach.c \
./src/a68g/rts-monitor.c \
./src/a68g/rts-parallel.c \
./src/a68g/rts-plotutils.c \
./src/a68g/rts-postgresql.c \
./src/a68g/rts-sounds.c \
./src/a68g/rts-stowed.c \
./src/a68g/rts-transput.c \
./src/a68g/rts-unformatted.c \
./src/a68g/single-blas.c \
./src/a68g/single.c \
./src/a68g/single-decomposition.c \
./src/a68g/single-fft.c \
./src/a68g/single-gamic.c \
./src/a68g/single-gsl.c \
./src/a68g/single-laplace.c \
./src/a68g/single-math.c \
./src/a68g/single-multivariate.c \
./src/a68g/single-physics.c \
./src/a68g/single-python.c \
./src/a68g/single-r-math.c \
./src/a68g/single-rnd.c \
./src/a68g/single-svd.c \
./src/a68g/single-torrix.c \
./src/a68g/single-torrix-gsl.c \
./src/include/a68g-common.h \
./src/include/a68g-config.win32.h \
./src/include/a68g-defines.h \
./src/include/a68g-diagnostics.h \
./src/include/a68g-double.h \
./src/include/a68g-enums.h \
./src/include/a68g-environ.h \
./src/include/a68g-frames.h \
./src/include/a68g-generic.h \
./src/include/a68g-genie.h \
./src/include/a68g.h \
./src/include/a68g-includes.h \
./src/include/a68g-level-3.h \
./src/include/a68g-lib.h \
./src/include/a68g-listing.h \
./src/include/a68g-mach.h \
./src/include/a68g-masks.h \
./src/include/a68g-math.h \
./src/include/a68g-moids.h \
./src/include/a68g-mp.h \
./src/include/a68g-nil.h \
./src/include/a68g-numbers.h \
./src/include/a68g-optimiser.h \
./src/include/a68g-options.h \
./src/include/a68g-parser.h \
./src/include/a68g-physics.h \
./src/include/a68g-platform.h \
./src/include/a68g-plugin.h \
./src/include/a68g-postulates.h \
./src/include/a68g-prelude-gsl.h \
./src/include/a68g-prelude.h \
./src/include/a68g-prelude-mathlib.h \
./src/include/a68g-stack.h \
./src/include/a68g-stddef.h \
./src/include/a68g-torrix.h \
./src/include/a68g-transput.h \
./src/include/a68g-types.h
pkginclude_HEADERS = \
./a68g-config.h \
./src/include/a68g-common.h \
./src/include/a68g-config.win32.h \
./src/include/a68g-defines.h \
./src/include/a68g-diagnostics.h \
./src/include/a68g-double.h \
./src/include/a68g-enums.h \
./src/include/a68g-environ.h \
./src/include/a68g-frames.h \
./src/include/a68g-generic.h \
./src/include/a68g-genie.h \
./src/include/a68g.h \
./src/include/a68g-includes.h \
./src/include/a68g-level-3.h \
./src/include/a68g-lib.h \
./src/include/a68g-listing.h \
./src/include/a68g-mach.h \
./src/include/a68g-masks.h \
./src/include/a68g-math.h \
./src/include/a68g-moids.h \
./src/include/a68g-mp.h \
./src/include/a68g-nil.h \
./src/include/a68g-numbers.h \
./src/include/a68g-optimiser.h \
./src/include/a68g-options.h \
./src/include/a68g-parser.h \
./src/include/a68g-physics.h \
./src/include/a68g-platform.h \
./src/include/a68g-plugin.h \
./src/include/a68g-postulates.h \
./src/include/a68g-prelude-gsl.h \
./src/include/a68g-prelude.h \
./src/include/a68g-prelude-mathlib.h \
./src/include/a68g-stack.h \
./src/include/a68g-stddef.h \
./src/include/a68g-torrix.h \
./src/include/a68g-transput.h \
./src/include/a68g-types.h
bin_PROGRAMS = a68g
a68g_CFLAGS = -DBINDIR='"$(bindir)"' -DINCLUDEDIR='"$(includedir)"'
a68g_LDADD = @CURSES_LIBS@
a68g_CPPFLAGS = -I$(top_srcdir)/src/include @CURSES_CFLAGS@
TESTS_ENVIRONMENT=./a68g
TESTS=\
	./src/test-set/01-ackermann.a68\
	./src/test-set/02-all-parser.a68\
	./src/test-set/03-arithmetic-derivative.a68\
	./src/test-set/04-bulls-and-cows.a68\
	./src/test-set/05-chaos.a68\
	./src/test-set/06-decision.a68\
	./src/test-set/07-dictionary.a68\
	./src/test-set/08-digits.a68\
	./src/test-set/09-end-of-time.a68\
	./src/test-set/10-fft.a68\
	./src/test-set/11-fft-par.a68\
	./src/test-set/12-fibonacci-grammar.a68\
	./src/test-set/13-formula-manipulation.a68\
	./src/test-set/14-gammainc.a68\
	./src/test-set/15-guldens.a68\
	./src/test-set/16-hamming.a68\
	./src/test-set/17-hilbert-matrix.a68\
	./src/test-set/18-lisp.a68\
	./src/test-set/19-lucas-sequence.a68\
	./src/test-set/20-mandelbrot.a68\
	./src/test-set/21-math.a68\
	./src/test-set/22-matrix.a68\
	./src/test-set/23-pebbles.a68\
	./src/test-set/24-procedures.a68\
	./src/test-set/25-pseudo-switch.a68\
	./src/test-set/26-queens.a68\
	./src/test-set/27-quicksort.a68\
	./src/test-set/28-rationals.a68\
	./src/test-set/29-roman-decimal.a68\
	./src/test-set/30-semana-santa.a68\
	./src/test-set/31-tukey.a68\
	./src/test-set/32-warshall.a68\
	./src/test-set/33-whetstones.a68\
	./src/test-set/34-www.a68\
	./src/test-set/35-zeroin.a68

man_MANS = ./src/doc/a68g.1
docdir = @docdir@
doc_DATA = AUTHORS COPYING ChangeLog NEWS README
EXTRA_DIST = $(man_MANS)\
	$(TESTS)

